package Mod4CT;

//Abstract class Shape
public abstract class Shape {
    //Abstract method to calculate surface area
    public abstract double surfaceArea();

    //Abstract method to calculate volume
    public abstract double volume();

}
